# rustiwire

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: devices.rs  mod.rs
src/client/output/: device_view.rs  mod.rs  routes_view.rs
src/commands/: configuration.rs  device.rs  menu.rs  mod.rs
